# sbglogger

./: CMakeLists.txt  README.md
SbgECom/: CMakeLists.txt
SbgECom/src/binaryLogs/: sbgEComBinaryLogs.c
cmakefunctions/: README.md
cmakefunctions/cmake/executable/: build_number.cmake
cmakefunctions/cmake/functions/: svCMakeCore.cmake
sbgParser/: CMakeLists.txt  version.txt
sbgParser/res/: version.rc
sbgParser/src/: main.cpp
