cmake_minimum_required(VERSION 3.15)
svCMakeCore("APP")

if(MSVC)
    TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  version)
endif()

TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}" PUBLIC "../SbgECom/src")
TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}" PUBLIC "../SbgECom/common")
TARGET_LINK_LIBRARIES("${PROJECT_NAME}" sbgECom)